[package]
authors = ["Jørgen Kristensen <jk@bitnor.org>"]
description = "Standardized quantum-resistant cryptographic primitives"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "pqcrypto-std"
readme = "README.md"
repository = "https://github.com/jrg1k/pqcrypto-std"
rust-version = "1.79.0"
version = "0.1.1"

[dependencies]
rand_core = { version = "0.6.4", default-features = false }
sha3 = { version = "0.10.8", default-features = false }

[dev-dependencies]
hex = { version = "0.4.3", features = ["serde"] }
rand = { version = "0.8.5" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1.0.128" }
